<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColorDark"
    android:padding="15dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:foregroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:foregroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                android:inputType="textEmailAddress"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:backgroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                android:textColorHint="@color/md_white_1000"
                android:inputType="textPassword"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:foregroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Contact Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:foregroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contact_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                android:inputType="phone"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            />
        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sigup_button"
            android:background="@drawable/round_button"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="10dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/md_yellow_600"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />

    </LinearLayout>

</ScrollView>