<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColorDark"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_title"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/PrimaryColor"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginLeft="20dp"
            android:background="@drawable/round_corner_layout"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:padding="5dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_information"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColor="@color/md_white_1000"
            android:backgroundTint="@color/md_white_1000"
            android:textColorHint="@color/md_white_1000"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/user"
            />

        <Button
            android:id="@+id/recover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_recover"
            android:background="@drawable/round_button"
            android:textColor="@color/md_white_1000"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/md_yellow_600"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="15sp"
            />

    </LinearLayout>

</RelativeLayout>