<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryColorDark"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold"
            android:textSize="20sp"
            />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:foregroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/user"
                />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/md_white_1000"
            android:backgroundTint="@color/md_white_1000"
            >
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:textColor="@color/md_white_1000"
                android:backgroundTint="@color/md_white_1000"
                android:textColorHint="@color/md_white_1000"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="12dp"
            android:text="@string/login_button"
            android:background="@drawable/round_button"
            android:textColor="@color/md_white_1000"/>

    </LinearLayout>

</RelativeLayout>